# Corewar

./: 42.s  CMakeLists.txt  Makefile  author  test.cor  test.s  test.sh  zork.s
asm.dSYM/Contents/Resources/DWARF/: asm
examples/: sebc.s
includes/: asm.h  corewar.h  dasm.h  op.h  op_1.h
libft/: Makefile
libft/includes/: get_next_line.h  libft.h
libft/src/: attribute.c  ft_atoi.c  ft_bzero.c  ft_error.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_itoa.c  ft_memalloc.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_putchar.c  ft_putendl_fd.c  ft_putnbr.c  ft_putstr.c  ft_strchr.c  ft_strchr_asm.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strjoin_asm.c  ft_strlen.c  ft_strnew.c  ft_strnew_float.c  ft_strstr.c  ft_strsub.c  get_next_line.c  print_s.c
now/: Misaka_Mikoto.s
src/asm/: asm.c  assembler.c  crypt_arguments.c  crypt_label.c  crypt_links.c  crypt_operator.c  crypting.c  freeer.c  ft_error_asm.c  get_name_comment.c  helper.c  helper_1.c  initialization.c  link.c  new_filename.c  parsing.c  validation.c  write_bytecode.c
src/dasm/: byte_code.c  byte_code_1.c  byte_code_2.c  byte_code_3.c  free_struct.c  help.c  help_write_to_file.c  init.c  magic_header.c  main.c  oper.c  oper1.c  oper2.c  write_to_file.c
src/vm/: args.c  checks.c  counters.c  cursor.c  error_1.c  free.c  installers.c  killer.c  little_fu.c  main.c  maths.c  operations.c  operations_1.c  operations_2.c  operations_3.c  other_installers.c  parce.c  parce_flags.c  printing.c  war.c
valid/: hash_at_header.s  sq_at_header.s
vm_champs/: 42.cor  42.s
vm_champs/champs/: 42.s  Backward.s
