cmake_minimum_required(VERSION 3.15)
project(Corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)
include_directories(libft/includes)
include_directories(libft/src)
include_directories(src)
include_directories(src/asm)

add_executable(Corewar
    includes/asm.h
    includes/op.h
    libft/includes/ft_printf.h
    libft/includes/get_next_line.h
    libft/includes/libft.h
    libft/src/attribute.c
    libft/src/digits_nbr.c
    libft/src/for_norm.c
    libft/src/ft_atoi.c
    libft/src/ft_bzero.c
    libft/src/ft_isalnum.c
    libft/src/ft_isalpha.c
    libft/src/ft_isdigit.c
    libft/src/ft_itoa.c
    libft/src/ft_memset.c
    libft/src/ft_printf.c
    libft/src/ft_putchar.c
    libft/src/ft_putendl_fd.c
    libft/src/ft_putnbr.c
    libft/src/ft_putstr.c
    libft/src/ft_strchr.c
    libft/src/ft_strcmp.c
    libft/src/ft_strdel.c
    libft/src/ft_strdup.c
    libft/src/ft_strjoin.c
    libft/src/ft_strlen.c
    libft/src/ft_strnew.c
    libft/src/ft_strnew_float.c
    libft/src/ft_strstr.c
    libft/src/ft_strsub.c
    libft/src/get_next_line.c
    libft/src/initialize.c
    libft/src/print_c.c
    libft/src/print_d.c
    libft/src/print_e.c
    libft/src/print_e_help.c
    libft/src/print_e_other.c
    libft/src/print_e_other_1.c
    libft/src/print_e_other_2.c
    libft/src/print_e_presicion.c
    libft/src/print_f1.c
    libft/src/print_o.c
    libft/src/print_s.c
    libft/src/print_u.c
    libft/src/print_x.c
    libft/src/printing.c
        libft/src/ft_strchr_asm.c
        libft/src/ft_memdel.c
        libft/src/ft_strjoin_asm.c
        libft/src/ft_error.c
    src/asm/asm.c
    src/asm/assembler.c
    src/asm/initialization.c
    src/asm/validation.c
    src/asm/parsing.c
        src/asm/helper.c
        src/asm/get_name_comment.c
        src/asm/ft_error_asm.c
        src/asm/crypting.c)
